--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node -r esm index.js",
     "start": "node index.js",
-    "heroku-postbuild": "cd frontend && npm && npm run build"
+    "heroku-postbuild": "cd frontend && npm run build"
   },
   "author": "",
   "license": "ISC",
