--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "10.12.0"
+  },
   "scripts": {
     "dev": "node -r esm index.js",
     "start": "node index.js",
